gke/2-HTTPproxy/playmo-fqdn.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: root-playmo
  namespace: playmo
spec:
  virtualhost:
    fqdn: playmo.santa.local
    tls:
      secretName: santa/wildcard-tls
  routes:
    - services:
        - name: playmo-v1
          port: 80
