gke/2-HTTPproxy/playmo-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: playmo
  namespace: playmo
spec:
  routes:
    - services:
        - name: playmo-v1
          port: 80
    - conditions:
      - prefix: /blog
      services:
        - name: playmo-blog
          port: 80
---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: playmo-faq
  namespace: playmo
spec:
  routes:
    - conditions:
      - prefix: /faq
      services:
        - name: playmo-fa
          port: 80
